differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr8927-1.c-5.4.0-3.out.txt
pr8927-1.c: In function ‘foo’:
pr8927-1.c:8:3: error: ‘bar’ undeclared (first use in this function)
   bar  
   ^
pr8927-1.c:8:3: note: each undeclared identifier is reported only once for each function it appears in
